workloads/applications/base/camel-wfp-app-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camel-wfp-app-sandbox-ui
  namespace: camel-wfp
  labels:
    app: camel-wfp-app-sandbox-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camel-wfp-app-sandbox-ui
  template:
    metadata:
      labels:
        app: camel-wfp-app-sandbox-ui
    spec:
      serviceAccountName: camel-wfp-ui
      containers:
        - image: 744692937981.dkr.ecr.us-east-1.amazonaws.com/camel-wfp-ui:latest
          name: camel-wfp-sandbox-ui
          ports:
            - containerPort: 8080
              name: http
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1.5Gi"
              cpu: ".5"
      imagePullSecrets:
        - name: us-east-1-ecr-registry
