workloads/applications/base/camel-wfp-app-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: camel-wfp
  name: camel-wfp-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: camel-wfp-app-sandbox-ui
