workloads/applications/base/camel-wfp-app-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: camel-wfp
  name: camel-wfp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: launchpad
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: launchpad
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/success-codes: '302'
    alb.ingress.kubernetes.io/inbound-cidrs: '47.32.231.239/32,59.94.34.114/32,52.4.244.61/32,209.161.250.102/32,135.0.166.59/32,54.224.203.162/32,184.66.229.61/32'
    alb.ingress.kubernetes.io/waf-acl-id: '76b478fd-eab7-4985-9c5c-bafe562137c9'
spec:
  rules:
    - host: "wfp.sandbox.paasport.io"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: camel-wfp-ui
              port:
                number: 8080
